assets/src/styles/blocks/Media.scss
.media-block {
  .video-embed {
    video[poster] {
      object-fit: inherit;
    }
  }

  .container {
    padding-left: 0;
    padding-right: 0;

    @include medium-and-up {
      padding-left: 15px;
      padding-right: 15px;
    }
  }
}

.embed-container, .wp-block-embed-youtube .wp-block-embed__wrapper, .wp-block-embed-vimeo .wp-block-embed__wrapper, .wp-block-embed-dailymotion .wp-block-embed__wrapper, .wp-block-embed-kickstarter .wp-block-embed__wrapper {
  position: relative;
  padding-bottom: 56.25%;
  overflow: hidden;
  max-width: 100%;
  max-height: 100%;
}

.embed-container iframe, .wp-block-embed-youtube iframe, .wp-block-embed-vimeo iframe, .wp-block-embed-dailymotion iframe, .wp-block-embed-kickstarter iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.video-embed, .wp-block-embed-youtube, .wp-block-embed-vimeo, .wp-block-embed-dailymotion, .wp-block-embed-kickstarter {
  margin-top: $space-xs;
  margin-bottom: $space-md;

  @include  small-and-up {
    max-width: 360px;
    max-height: 202px;
  }

  @include medium-and-up {
    max-width: 690px;
    max-height: 388px;
  }

  @include large-and-up {
    margin-top: $space-md;
    margin-bottom: $space-lg;
    max-width: 930px;
    max-height: 523px;
  }

  @include x-large-and-up {
    max-width: 100%;
    max-height: 615px;
  }
}

.wp-block-embed-twitter, .wp-block-embed-instagram, .wp-block-embed-soundcloud, .wp-block-embed-reddit, .wp-block-embed-flickr {
  width: 330px;
  margin-top: $space-xs;
  margin-bottom: $space-md;

  @include  small-and-up {
    width: 330px;
  }

  @include medium-and-up {
    width: 510px;
  }

  @include large-and-up {
    margin-top: $space-md;
    margin-bottom: $space-lg;
    width: 610px;
  }

  @include x-large-and-up {
    width: 630px;
  }
}

.wp-block-embed-twitter iframe, .wp-block-embed-instagram iframe, .wp-block-embed-soundcloud iframe, .wp-block-embed-reddit iframe, .wp-block-embed-flickr iframe {
  width: 100% !important;
}

.wp-block-embed-twitter {
  .wp-block-embed__wrapper {
    padding-bottom: unset;
  }
}

.instagram-media {
  width: 100% !important;
  max-width: 100% !important;
}

.wp-block-embed-reddit {
  .wp-block-embed__wrapper {
    padding-bottom: unset;
  }

  .embedly-card-hug {
    max-width: 100% !important;
    margin: unset !important;
  }
}

.wp-block-embed-flickr img {
  width: 100%;
}

.video-embed-container {
  max-width: 100%;
  width: 100%;
}

